Fix NPE when project path contains spaces (URL-encoded %20), fixes knowm/dropwizard-sundial#6